[package]
name = "kbwatch"
version = "0.1.0"
edition = "2021"
default-run = "kbwatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"

[dependencies]
chrono = "0.4.23"
directories = "4.0.1"
log = "0.4.17"
simple-log = "1.6.0"
ctrlc = "3.2.5"
crossbeam-channel = "0.5.7"
anyhow = "1.0.69"
reqwest = { version = "0.11.14", features = [ "blocking" ] }
hostname = "0.3.1"
serde_json = "1.0.93"
rusb = "0.9.1"
nokhwa = { version = "0.10.3", features = [ "input-native", "output-threaded" ] }
image = { version = "0.24.5", features = ["png"] }
clap = { version = "4.1.8", features = ["derive"] }
color-eyre = "0.6.2"
flume = "0.10.14"

[dependencies.ggez]
version = "0.8.1"
default-features = false
