[package]
name = "kbwatch"
version = "0.2.0"
authors = ["Paul DE TEMMERMAN <p2trman@gmail.com>"]
edition = "2021"
default-run = "kbwatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"

[dependencies]
chrono = "0.4.38"
directories = "5.0.1"
log = "0.4.22"
simple-log = "1.6.0"
ctrlc = "3.4.4"
crossbeam-channel = "0.5.13"
anyhow = "1.0.86"
reqwest = { version = "0.12.5", features = [ "blocking" ] }
hostname = "0.4.0"
serde_json = "1.0.120"
rusb = "0.9.4"
