[package]
name = "kbwatch"
version = "0.2.0"
authors = ["Paul DE TEMMERMAN <p2trman@gmail.com>"]
edition = "2021"
default-run = "kbwatch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
chrono = "0.4"
directories = "6.0"
log = "0.4"
simple-log = "2.1"
ctrlc = "3.4"
crossbeam-channel = "0.5"
anyhow = "1.0"
reqwest = { version = "0.12", features = [ "blocking" ] }
hostname = "0.4"
serde_json = "1.0"
rusb = "0.9"
